# Chinese-Sentiment-BiLSTM-Pro

./: README.md  pyproject.toml
Chinese-Sentiment-BiLSTM/code/: .dockerignore  .env_deepseek  2.py  API_CONFIG.md  BATCH_TEST.md  DEEPSEEK_USAGE.md  DUAL_MODE_GUIDE.md  Dockerfile  LAYOUT_OPTIMIZATION.md  QUICKSTART.md  README.md  STARTUP_GUIDE.md  advanced_app.html  app.py  check_deepseek_service.py  check_services.py  complete_test.py  debug_flask_env.py  debug_preprocessor.py  deepseek_api.py  deepseekapi.env  docker_requirements.txt  domain_api.py  domain_app.py  fix_html.py  generate_model_comparison.py  improved_app.html  local_model_api.py  main.py  pyproject.toml  requirements_deepseek.txt  requires  set_api_key.bat  simple_app.py  simple_test.py  start_and_test.py  start_flask.bat  start_flask.py  start_services.bat  start_web_server.py  (+18 more)
Chinese-Sentiment-BiLSTM/code/dataset/processed/: meta.json
Chinese-Sentiment-BiLSTM/code/dataset/reports/: baseline_report.txt  bert_report.txt  test_report.txt  training_log.csv
Chinese-Sentiment-BiLSTM/code/src/: __init__.py  predict.py  predict_domain.py  sentiment_trend.py  train.py  train_domain.py
Chinese-Sentiment-BiLSTM/code/src/data/: domain_preprocessor.py  init_data.py  preprocess.py
Chinese-Sentiment-BiLSTM/code/templates/: domain_analysis.html  index.html  performance.html  simple_index.html  simple_performance.html  trend.html
Chinese-Sentiment-BiLSTM/code/运行结果/: baseline_bert.txt  baseline_nb.txt  ini_data.txt  plot_bert_cm.txt  plot_curve.txt  predict.txt  proprecess.txt  train.txt  跑.md
(+11 files in other folders)
