[tool.poetry]
name = "chinese-sentiment-bilstm"
version = "0.1.0"
description = "基于 BiLSTM 和 BERT 的中文情感分析项目"
authors = ["YourName <your@email.com>"]
license = "MIT"
# 关键：禁用包模式，只用于依赖管理
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = ">=2.0.0"
pandas = ">=2.0.0"
numpy = ">=1.24.0"
scikit-learn = ">=1.2.0"
transformers = ">=4.30.0"
tokenizers = ">=0.13.0"
accelerate = ">=0.20.0"
tqdm = ">=4.65.0"
matplotlib = ">=3.7.0"
seaborn = ">=0.12.0"
jieba = ">=0.42.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# 镜像源配置，放在文件末尾
[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "supplemental"