[project]
name = "sentiment-analysis"
version = "0.1.0"
description = "基于深度学习的影评情感分析"
authors = [
    {name = "SuZhixin"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "jieba (>=0.42.1,<0.43.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pandarallel (>=1.6.5,<2.0.0)",
    "opencc (>=1.1.9,<2.0.0)",
    "flask (>=3.1.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
